# assisted-living

linux_project/: CMakeLists.txt
linux_project/src/: CoffeeMakerHandler.h  CoffeeMakerPosition.h  CoffeeMakerStatus.h  ICoffeeMakerHandler.h  ThresholdBool.h
linux_project/src/threads/: CoffeeFilterHolderThread.h  CoffeeFilterThread.h  CoffeeThread.h  Helper.h  WaterThread.h
project/: KoffiezetDetectie.sln  install.txt
project/KoffiezetDetectie/: CoffeeMakerHandler.h  KoffiezetDetectie.vcxproj  KoffiezetDetectie.vcxproj.filters  Logger.cpp  Logger.h  OpenCV_Debug.props  OpenCV_Release.props  main.cpp
project/KoffiezetDetectie/threads/: CoffeeCanThread.h  CoffeeFilterHolderThread.h  CoffeeFilterThread.h  CoffeeThread.h  Helper.h  MachineOnThread.h  MachineRunningThread.h  ReservoirOpenedThread.h  WaterThread.h
